Redesign: Solarpunk aesthetic, added Bootcamp and Resources pages

--- a/index.html
+++ b/index.html
@@ -1,31 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="JaagaStudy - Empowering learning through innovation">
-    <title>JaagaStudy</title>
+    <meta name="description" content="JaagaStudy - Solarpunk Education for Creative AI">
+    <title>JaagaStudy | Future of Learning</title>
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <div class="background-globes">
-        <div class="globe globe-1"></div>
-        <div class="globe globe-2"></div>
-    </div>
-    
+    <nav>
+        <div class="logo">Jaaga<span>Study</span></div>
+        <div class="nav-links">
+            <a href="index.html" class="active">Home</a>
+            <a href="bootcamp.html">Bootcamp</a>
+            <a href="resources.html">Resources</a>
+            <a href="https://discord.gg/example" target="_blank" class="discord-btn">Join Discord</a>
+        </div>
+    </nav>
+
     <main>
-        <div class="glass-card">
-            <h1>JaagaStudy</h1>
-            <p class="subtitle">Future of Learning</p>
-            <p class="description">We are building something extraordinary. A new way to experience education is coming soon.</p>
-            <div class="actions">
-                <button class="primary-btn">Get Notified</button>
-                <button class="secondary-btn">Learn More</button>
+        <section class="hero">
+            <img src="images/hero-solarpunk.png" alt="Solarpunk City" class="hero-bg">
+            <div class="hero-content">
+                <p class="tagline">The Future is Green & Gold</p>
+                <h1>Creative AI Bootcamp</h1>
+                <p class="hero-description">Join us to build a Solarpunk future. Master Generative AI, collaborate with
+                    artists and coders, and launch your ideas.</p>
+                <div class="actions">
+                    <a href="bootcamp.html" class="btn btn-primary">Join Today</a>
+                    <a href="https://discord.gg/example" class="btn btn-outline">Community</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="container">
+            <div class="grid">
+                <div class="card">
+                    <h3>Learn & Build</h3>
+                    <p>Immersive learning cycles focusing on bleeding-edge AI tools and creative hacking.</p>
+                </div>
+                <div class="card">
+                    <h3>Community First</h3>
+                    <p>A vibrant Discord community of weirdos, creators, and technologists.</p>
+                </div>
+                <div class="card">
+                    <h3>Solarpunk Ethos</h3>
+                    <p>Optimistic tech-positive future building. High tech, low life? No. High tech, high nature.</p>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="partners-section">
+            <h3>OUR PARTNERS</h3>
+            <div class="partners">
+                <img src="images/partners/mars-college.png" alt="Mars College" class="partner-logo">
+                <img src="images/partners/eden-art.png" alt="Eden Art" class="partner-logo">
             </div>
         </div>
-    </main>
+        <p class="copyright">&copy; 2026 Jaaga Study. Built with Hope.</p>
+    </footer>
 </body>
+
 </html>
