Update bootcamp page content and add timeline

--- a/bootcamp.html
+++ b/bootcamp.html
@@ -21,53 +21,201 @@
     </nav>
 
     <main>
+        <!-- Title Section -->
         <div class="page-header">
             <p class="tagline">Cohort 01</p>
             <h1>Creative AI Bootcamp</h1>
-            <p class="hero-description" style="max-width: 600px; margin: 0 auto 2rem;">
-                Starting Jan 12. Dive deep into the intersection of Art and Artificial Intelligence.
+            <p class="subtitle" style="color: var(--secondary-color); margin-bottom: 0.5rem;">Make cool stuff with AI.
+                Together.</p>
+            <p class="hero-description" style="max-width: 600px; margin: 0 auto 1.5rem; font-size: 1.1rem;">
+                Jan 19 – Mar 13 | 9 Weeks | Discord
             </p>
-            <a href="#" class="btn btn-primary">Join Today</a>
+            <p style="color: #cbd5e1; margin-bottom: 2rem;">Join the cohort by Jan 18th</p>
+            <a href="https://discord.gg/example" class="btn btn-primary">Join Discord</a>
         </div>
 
+        <!-- Intro -->
+        <section class="container" style="text-align: center; max-width: 800px;">
+            <p style="font-size: 1.25rem; color: #cbd5e1; line-height: 1.8;">
+                Join an experimental nine-week virtual cohort of enthusiasts and artists from January 19th to March
+                13th. This program serves as an online extension of the Mars College program on Creative AI, focused on
+                hands-on exploration of emerging creative tools.
+            </p>
+        </section>
+
+        <!-- Why Join -->
         <section class="container">
-            <h2 style="text-align: center;">Program Cycle</h2>
-            <div class="grid">
+            <h2 style="text-align: center;">Why Join This Bootcamp?</h2>
+            <div class="grid" style="grid-template-columns: 1fr; gap: 2rem; max-width: 900px; margin: 2rem auto;">
                 <div class="card">
-                    <span class="meta">Phase 1</span>
-                    <h3>Ideas Week</h3>
-                    <p>Collaborative brainstorming. Form squads, explore prompts, and define your problem statement. No
-                        idea is too wild.</p>
-                </div>
-                <div class="card">
-                    <span class="meta">Phase 2</span>
-                    <h3>Hackathon</h3>
-                    <p>Intense building phase. 48 hours of code, coffee, and creation. Turn your concepts into working
-                        prototypes.</p>
-                </div>
-                <div class="card">
-                    <span class="meta">Phase 3</span>
-                    <h3>Showcase</h3>
-                    <p>Present your work to the world. Demos, feedback, and celebration with the community.</p>
+                    <p style="font-size: 1.1rem; margin-bottom: 1.5rem;">
+                        This is a free, online, hands-on program designed for those who want to move beyond
+                        surface-level AI. Over two months, we follow a simple arc: exploring ideas, developing technical
+                        skills, and building projects.
+                    </p>
+                    <div
+                        style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 1.5rem;">
+                        <div>
+                            <h3 style="font-size: 1.2rem;">Evolution of Skill</h3>
+                            <p>Shift from basic prompting to a more in depth understanding of how the AI tool space for
+                                creative work is evolving.</p>
+                        </div>
+                        <div>
+                            <h3 style="font-size: 1.2rem;">Creative Automation</h3>
+                            <p>Learn to scale your output without losing your personal aesthetic.</p>
+                        </div>
+                        <div>
+                            <h3 style="font-size: 1.2rem;">Review</h3>
+                            <p>Interact with experts on Discord and get your work reviewed.</p>
+                        </div>
+                        <div>
+                            <h3 style="font-size: 1.2rem;">Tools</h3>
+                            <p>Receive free credits on eden.art for your projects.</p>
+                        </div>
+                        <div>
+                            <h3 style="font-size: 1.2rem;">Community</h3>
+                            <p>Connect with others interested in the intersection of art and technology.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <section class="container" style="text-align: center; margin-top: 2rem;">
-            <div class="card" style="display: inline-block; max-width: 800px; text-align: left;">
-                <h3>Why join?</h3>
-                <p>
-                    This is not just a course. It's a collective experiment. You will work with:
-                </p>
-                <ul style="color: #cbd5e1; margin-left: 1.5rem; margin-bottom: 2rem; list-style-type: none;">
-                    <li style="margin-bottom: 0.5rem;" class="text-teal">▸ Stable Diffusion & Midjourney Workflows</li>
-                    <li style="margin-bottom: 0.5rem;" class="text-teal">▸ LLM Agent Building</li>
-                    <li style="margin-bottom: 0.5rem;" class="text-teal">▸ Creative Coding with p5.js/Three.js</li>
-                </ul>
-                <div style="text-align: center;">
-                    <a href="#" class="btn btn-primary">Apply for Cohort</a>
+        <!-- How it Works -->
+        <section class="container">
+            <h2 style="text-align: center;">How it Works</h2>
+            <div class="card" style="max-width: 900px; margin: 2rem auto;">
+                <p style="margin-bottom: 2rem; color: #cbd5e1; font-size: 1.1rem;">Whether you are a professional artist
+                    or just curious, this program is open to anyone with a drive to experiment. There are no technical
+                    prerequisites.</p>
+
+                <div style="display: flex; flex-direction: column; gap: 1.5rem;">
+                    <div>
+                        <h3 class="text-teal">Easy Enrollment</h3>
+                        <p>To join the cohort, simply sign up by January 18th.</p>
+                    </div>
+                    <div>
+                        <h3 class="text-teal">The Experience</h3>
+                        <p>This is a self-led journey supported by the community. You will primarily use Eden.Art—a
+                            creative toolkit for generating images, video, and audio—to build "Agents" or custom
+                            assistants. You will be able to make the best of use of this program by spending five hours
+                            a week.</p>
+                    </div>
+                    <div>
+                        <h3 class="text-teal">Support</h3>
+                        <p>We will have weekly check-ins on Discord to share progress and stay connected.</p>
+                    </div>
+                    <div>
+                        <h3 class="text-teal">Expectations</h3>
+                        <p>As this is an experimental first version, we encourage you to follow the curriculum and share
+                            your work as you go. For those who find a deep rhythm with their projects, there may be
+                            future opportunities to explore the work further through residency programs.</p>
+                    </div>
                 </div>
             </div>
+        </section>
+
+
+        <!-- Program Timeline -->
+        <section class="container">
+            <h2 style="text-align: center;">Program Timeline</h2>
+            <div class="timeline">
+                <!-- Week 0 (Right) -->
+                <div class="timeline-item right">
+                    <div class="timeline-content">
+                        <span class="timeline-date">Jan 12 - Week 0</span>
+                        <h3>Ideas Week</h3>
+                        <p><strong>Community Launch:</strong> Join the discord group, introduce yourself and share what
+                            excites you—be it learning goals, ideas, or artistic visions.</p>
+                    </div>
+                </div>
+
+                <!-- Week 1 (Left) -->
+                <div class="timeline-item left">
+                    <div class="timeline-content">
+                        <span class="timeline-date">Jan 19 - Week 1</span>
+                        <h3>Make an Agent</h3>
+                    </div>
+                </div>
+
+                <!-- Week 2 (Left) -->
+                <div class="timeline-item left">
+                    <div class="timeline-content">
+                        <span class="timeline-date">Jan 26 - Week 2</span>
+                        <h3>Make Videos</h3>
+                    </div>
+                </div>
+
+                <!-- Week 3 (Left) -->
+                <div class="timeline-item left">
+                    <div class="timeline-content">
+                        <span class="timeline-date">Feb 02 - Week 3</span>
+                        <h3>Agent Schedules</h3>
+                    </div>
+                </div>
+
+                <!-- Week 4 (Left) -->
+                <div class="timeline-item left">
+                    <div class="timeline-content">
+                        <span class="timeline-date">Feb 09 - Week 4</span>
+                        <h3>TBD</h3>
+                    </div>
+                </div>
+
+                <!-- Week 5 (Right) -->
+                <div class="timeline-item right">
+                    <div class="timeline-content">
+                        <span class="timeline-date">Feb 16 - Week 5</span>
+                        <h3>Hackathon</h3>
+                        <p><strong>The Sprint:</strong> An intensive, multi-day exercise to build something substantial.
+                            End the week by presenting your final project concept.</p>
+                    </div>
+                </div>
+
+                <!-- Week 6 (Left) -->
+                <div class="timeline-item left">
+                    <div class="timeline-content">
+                        <span class="timeline-date">Feb 23 - Week 6</span>
+                        <h3>Project Update 1</h3>
+                    </div>
+                </div>
+
+                <!-- Week 7 (Left) -->
+                <div class="timeline-item left">
+                    <div class="timeline-content">
+                        <span class="timeline-date">Mar 02 - Week 7</span>
+                        <h3>Project Update 2</h3>
+                    </div>
+                </div>
+
+                <!-- Week 8 (Left) -->
+                <div class="timeline-item left">
+                    <div class="timeline-content">
+                        <span class="timeline-date">Mar 09 - Week 8</span>
+                        <h3>Project Update 3</h3>
+                    </div>
+                </div>
+
+                <!-- Week 9 (Right) -->
+                <div class="timeline-item right">
+                    <div class="timeline-content">
+                        <span class="timeline-date">Mar 16 - Week 9</span>
+                        <h3>Showcase</h3>
+                        <p><strong>The Finale:</strong> Present your achievements to the broader community and explore
+                            post-bootcamp collaborations.</p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <!-- About Jaaga Study -->
+        <section class="container" style="text-align: center; max-width: 800px; margin-top: 2rem;">
+            <h2>About Jaaga Study</h2>
+            <p style="font-size: 1.1rem; color: #cbd5e1;">
+                Jaaga Study started India’s first programming bootcamp, running for several years to help people acquire
+                new skills, collaborate with a vibrant community, and unlock new career opportunities.
+            </p>
         </section>
     </main>
 
