Update bootcamp timeline

--- a/bootcamp.html
+++ b/bootcamp.html
@@ -123,86 +123,46 @@
                 <!-- Week 0 (Right) -->
                 <div class="timeline-item right">
                     <div class="timeline-content">
-                        <span class="timeline-date">Jan 12 - Week 0</span>
+                        <span class="timeline-date">Jan 12 - Jan 18 (Week 0)</span>
                         <h3>Ideas Week</h3>
-                        <p><strong>Community Launch:</strong> Join the discord group, introduce yourself and share what
-                            excites you—be it learning goals, ideas, or artistic visions.</p>
+                        <p>Join the discord group, introduce yourself and share what excites you—be it learning goals,
+                            ideas, or artistic visions.</p>
                     </div>
                 </div>
 
-                <!-- Week 1 (Left) -->
+                <!-- Skill Development (4 Weeks) (Left) -->
                 <div class="timeline-item left">
                     <div class="timeline-content">
-                        <span class="timeline-date">Jan 19 - Week 1</span>
-                        <h3>Make an Agent</h3>
+                        <span class="timeline-date">Jan 19 - Feb 15 (4 Weeks)</span>
+                        <h3>Skill Development</h3>
                     </div>
                 </div>
 
-                <!-- Week 2 (Left) -->
-                <div class="timeline-item left">
-                    <div class="timeline-content">
-                        <span class="timeline-date">Jan 26 - Week 2</span>
-                        <h3>Make Videos</h3>
-                    </div>
-                </div>
-
-                <!-- Week 3 (Left) -->
-                <div class="timeline-item left">
-                    <div class="timeline-content">
-                        <span class="timeline-date">Feb 02 - Week 3</span>
-                        <h3>Agent Schedules</h3>
-                    </div>
-                </div>
-
-                <!-- Week 4 (Left) -->
-                <div class="timeline-item left">
-                    <div class="timeline-content">
-                        <span class="timeline-date">Feb 09 - Week 4</span>
-                        <h3>TBD</h3>
-                    </div>
-                </div>
-
-                <!-- Week 5 (Right) -->
+                <!-- Midterm Hackathon (Right) -->
                 <div class="timeline-item right">
                     <div class="timeline-content">
-                        <span class="timeline-date">Feb 16 - Week 5</span>
-                        <h3>Hackathon</h3>
-                        <p><strong>The Sprint:</strong> An intensive, multi-day exercise to build something substantial.
-                            End the week by presenting your final project concept.</p>
+                        <span class="timeline-date">Feb 16 - Feb 22 (Week 5)</span>
+                        <h3>Midterm Hackathon</h3>
+                        <p>An intensive, multi-day exercise to build something substantial. End the week by presenting
+                            your final project concept.</p>
                     </div>
                 </div>
 
-                <!-- Week 6 (Left) -->
+                <!-- Final Project (3 Weeks) (Left) -->
                 <div class="timeline-item left">
                     <div class="timeline-content">
-                        <span class="timeline-date">Feb 23 - Week 6</span>
-                        <h3>Project Update 1</h3>
+                        <span class="timeline-date">Feb 23 - Mar 15 (3 Weeks)</span>
+                        <h3>Final Project Development</h3>
                     </div>
                 </div>
 
-                <!-- Week 7 (Left) -->
-                <div class="timeline-item left">
-                    <div class="timeline-content">
-                        <span class="timeline-date">Mar 02 - Week 7</span>
-                        <h3>Project Update 2</h3>
-                    </div>
-                </div>
-
-                <!-- Week 8 (Left) -->
-                <div class="timeline-item left">
-                    <div class="timeline-content">
-                        <span class="timeline-date">Mar 09 - Week 8</span>
-                        <h3>Project Update 3</h3>
-                    </div>
-                </div>
-
-                <!-- Week 9 (Right) -->
+                <!-- Showcase (Right) -->
                 <div class="timeline-item right">
                     <div class="timeline-content">
-                        <span class="timeline-date">Mar 16 - Week 9</span>
+                        <span class="timeline-date">Mar 16 (Week 9)</span>
                         <h3>Showcase</h3>
-                        <p><strong>The Finale:</strong> Present your achievements to the broader community and explore
-                            post-bootcamp collaborations.</p>
+                        <p>Present your achievements to the broader community and explore post-bootcamp collaborations.
+                        </p>
                     </div>
                 </div>
 
