Update Partners section with new assets and layout

--- a/index.html
+++ b/index.html
@@ -104,12 +104,19 @@
     </main>
 
     <!-- Partners - Using restored CSS -->
+    <!-- Partners - Using restored CSS -->
     <footer>
         <div class="partners-section">
             <h3 style="color: var(--text-color);">Partners</h3>
             <div class="partners">
-                <img src="images/partners/mars-college.png" alt="Mars College" class="partner-logo">
-                <img src="images/partners/eden-art.png" alt="Eden Art" class="partner-logo">
+                <div class="partner-item mars-container">
+                    <img src="images/partners/mars-logo.png" alt="Mars College" class="partner-logo mars-logo">
+                    <span class="partner-text">Mars College</span>
+                </div>
+                <!-- Eden has logo and text together in image -->
+                <div class="partner-item">
+                    <img src="images/partners/eden-full.png" alt="Eden Art" class="partner-logo eden-logo">
+                </div>
             </div>
         </div>
         <p class="copyright">&copy; 2026 Jaaga Study. Built with Hope.</p>
