Update favicon and social meta tags

--- a/resources.html
+++ b/resources.html
@@ -7,6 +7,10 @@
     <title>Resources | JaagaStudy</title>
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="images/jaaga_logo.png">
+    <meta property="og:image" content="https://haricm.github.io/JaagaStudy/images/jaaga_logo.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="https://haricm.github.io/JaagaStudy/images/jaaga_logo.png">
 </head>
 
 <body>
