--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     </div>
 
                     <div>
-                        <a href="https://discord.gg/example" class="btn btn-primary">Join Discord</a>
+                        <a href="https://discord.gg/ZtakuZXEF" class="btn btn-primary">Join Discord</a>
                     </div>
                 </div>
             </div>
