Update blog roll: remove Solarpunk, tag Cohort 01 as Announcement

--- a/blog.html
+++ b/blog.html
@@ -42,38 +42,21 @@
             <!-- Tag Filter -->
             <div class="tags-nav">
                 <button class="tag-btn active" onclick="filterPosts('all')">All</button>
-                <button class="tag-btn" onclick="filterPosts('news')">News</button>
-                <button class="tag-btn" onclick="filterPosts('philosophy')">Philosophy</button>
-                <button class="tag-btn" onclick="filterPosts('bootcamp')">Bootcamp</button>
+                <button class="tag-btn" onclick="filterPosts('announcement')">Announcement</button>
             </div>
 
             <div class="grid" id="blog-grid" style="grid-template-columns: 1fr; max-width: 800px; margin: 0 auto;">
 
                 <!-- Post 1 -->
-                <article class="card" data-tags="news bootcamp">
+                <article class="card" data-tags="announcement">
                     <div style="margin-bottom: 0.5rem;">
-                        <span class="tag-pill">News</span>
-                        <span class="tag-pill">Bootcamp</span>
+                        <span class="tag-pill">Announcement</span>
                     </div>
                     <span class="meta">Jan 12, 2026</span>
                     <h3>Announcing Cohort 01</h3>
                     <p>We are thrilled to launch the first cohort of the Creative AI Bootcamp. This 9-week experiment
                         brings together artists, coders, and dreamers.</p>
                     <a href="blog/announcing-cohort-01.html" class="btn-outline"
-                        style="margin-left:0; padding: 0.5rem 1rem; font-size: 0.9rem;">Read More</a>
-                </article>
-
-                <!-- Post 2 -->
-                <article class="card" data-tags="philosophy aesthetic">
-                    <div style="margin-bottom: 0.5rem;">
-                        <span class="tag-pill">Philosophy</span>
-                        <span class="tag-pill">Aesthetic</span>
-                    </div>
-                    <span class="meta">Jan 10, 2026</span>
-                    <h3>Why Solarpunk?</h3>
-                    <p>In a world of dystopian narratives, we choose to build towards a future where technology and
-                        nature coexist. Here is why our aesthetic matters.</p>
-                    <a href="blog/why-solarpunk.html" class="btn-outline"
                         style="margin-left:0; padding: 0.5rem 1rem; font-size: 0.9rem;">Read More</a>
                 </article>
 
