Revert "Complete theme overhaul: Orange & Blue, no images"
This reverts commit 4549ea08e568fb240218060f529ba4aa42072c78.

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     <main>
         <!-- Title Section -->
         <section class="hero" style="min-height: 80vh;">
-
+            <img src="images/hero-solarpunk.png" alt="Solarpunk City" class="hero-bg">
             <div class="hero-content">
                 <h1>Jaaga Study</h1>
-                <p class="subtitle" style="color: #e2e8f0; font-weight: 500;">Building Skill-Based
+                <p class="subtitle" style="color: var(--secondary-color); font-weight: 500;">Building Skill-Based
                     Communities for the Future of Work.</p>
                 <div class="actions">
                     <a href="https://example.com/signup" class="btn btn-primary">Sign Up for Updates</a>
