--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <section class="hero" style="min-height: 60vh; align-items: center; display: flex;">
             <div class="hero-content">
                 <h1>Jaaga Study</h1>
-                <p class="subtitle" style=" font-weight: 500;">Building Skill-Based
+                <p class="subtitle" style="color: #e2e8f0; font-weight: 500;">Building Skill-Based
                     Communities for the Future of Work.</p>
                 <div class="actions">
                     <a href="https://example.com/signup" class="btn btn-primary">Sign Up for Updates</a>
@@ -56,7 +56,7 @@
             <section class="container">
                 <h2 style="text-align: center; margin-bottom: 2rem;">What is Jaaga Study?</h2>
 
-                <div class="card" style="max-width: 900px; margin: 0 auto 3rem;">
+                <div style="max-width: 900px; margin: 0 auto 3rem;">
                     <p style="font-size: 1.1rem; text-align: center; margin-bottom: 0;">
                         Jaaga Study is a community-driven learning laboratory. We move away from traditional lectures
                         and
