--- a/bootcamp.html
+++ b/bootcamp.html
@@ -214,16 +214,16 @@
                 </div>
             </section>
 
-            <!-- About Jaaga Study -->
-            <section class="container" style="text-align: center; max-width: 800px; margin-top: 2rem;">
-                <h2>About Jaaga Study</h2>
-                <p style="font-size: 1.1rem; ">
-                    Jaaga Study started India’s first programming bootcamp, running for several years to help people
-                    acquire
-                    new skills, collaborate with a vibrant community, and unlock new career opportunities.
-                </p>
-            </section>
         </div>
+        <!-- About Jaaga Study -->
+        <section class="container" style="text-align: center; max-width: 800px; margin-top: 4rem; margin-bottom: 4rem;">
+            <h2>About Jaaga Study</h2>
+            <p style="font-size: 1.1rem; color: #e2e8f0;">
+                Jaaga Study started India’s first programming bootcamp, running for several years to help people
+                acquire
+                new skills, collaborate with a vibrant community, and unlock new career opportunities.
+            </p>
+        </section>
     </main>
 
     <footer>
