Move About Jaaga Study into footer on bootcamp page

--- a/bootcamp.html
+++ b/bootcamp.html
@@ -215,21 +215,17 @@
             </section>
 
         </div>
-        <!-- About Jaaga Study -->
-        <section class="container" style="text-align: center; max-width: 800px; margin-top: 4rem; margin-bottom: 4rem;">
-            <h2>About Jaaga Study</h2>
-            <p style="font-size: 1.1rem; color: #e2e8f0;">
-                Jaaga Study started India’s first programming bootcamp, running for several years to help people
-                acquire
-                new skills, collaborate with a vibrant community, and unlock new career opportunities.
-            </p>
-        </section>
-    </main>
-
-    <footer>
-
-        <p class="copyright">&copy; 2026 Jaaga Study. Built with Hope.</p>
-    </footer>
+        <footer>
+            <div class="container" style="text-align: center; max-width: 800px; margin-bottom: 2rem;">
+                <h3>About Jaaga Study</h3>
+                <p style="font-size: 1.1rem; color: #e2e8f0; margin-top: 1rem;">
+                    Jaaga Study started India’s first programming bootcamp, running for several years to help people
+                    acquire
+                    new skills, collaborate with a vibrant community, and unlock new career opportunities.
+                </p>
+            </div>
+            <p class="copyright">&copy; 2026 Jaaga Study. Built with Hope.</p>
+        </footer>
 </body>
 
 </html>
