Style About Jaaga Study h3 as footer title

--- a/bootcamp.html
+++ b/bootcamp.html
@@ -217,7 +217,9 @@
         </div>
         <footer>
             <div class="container" style="text-align: center; max-width: 800px; margin-bottom: 2rem;">
-                <h3>About Jaaga Study</h3>
+                <h3
+                    style="font-size: 1rem; opacity: 0.8; letter-spacing: 2px; text-transform: uppercase; font-weight: 600; margin-bottom: 0.5rem;">
+                    About Jaaga Study</h3>
                 <p style="font-size: 1.1rem; color: #e2e8f0; margin-top: 1rem;">
                     Jaaga Study started India’s first programming bootcamp, running for several years to help people
                     acquire
