Add social media links to resources page footer

--- a/resources.html
+++ b/resources.html
@@ -92,7 +92,11 @@
     </main>
 
     <footer>
-
+        <div class="social-links">
+            <a href="https://www.facebook.com/groups/jaaga.study/" target="_blank" class="social-link">Facebook</a>
+            <a href="https://x.com/jaagastudy" target="_blank" class="social-link">X / Twitter</a>
+            <a href="https://it.linkedin.com/company/jaagastudy" target="_blank" class="social-link">LinkedIn</a>
+        </div>
         <p class="copyright">&copy; 2026 Jaaga Study. Built with Hope.</p>
     </footer>
 </body>
