--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
             <a href="https://www.facebook.com/groups/jaaga.study/" target="_blank" class="social-link">Facebook</a>
             <a href="https://x.com/jaagastudy" target="_blank" class="social-link">X / Twitter</a>
             <a href="https://it.linkedin.com/company/jaagastudy" target="_blank" class="social-link">LinkedIn</a>
+            <a href="https://www.instagram.com/JaagaStudy/" target="_blank" class="social-link">Instagram</a>
         </div>
         <p class="copyright">&copy; 2026 Jaaga Study. Built with Hope.</p>
     </footer>
