Correct tagline/subtitle text on bootcamp page

--- a/bootcamp.html
+++ b/bootcamp.html
@@ -35,10 +35,9 @@
     <main>
         <!-- Title Section -->
         <div class="page-header">
-            <p class="tagline">Experience the Mars College Way</p>
+            <p class="tagline">Cohort 01</p>
             <h1>Creative AI Bootcamp</h1>
-            <p class="subtitle" style="color: #e2e8f0; margin-bottom: 0.5rem;">Make cool stuff with AI.
-                Together.</p>
+            <p class="subtitle" style="color: #e2e8f0; margin-bottom: 0.5rem;">Experience the Mars College Way</p>
             <p class="hero-description"
                 style="color: #cbd5e1; max-width: 600px; margin: 0 auto 1.5rem; font-size: 1.1rem;">
                 Jan 19 – Mar 13 | 9 Weeks | Discord
