--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="logo"><a href="index.html">Jaaga<span>Study</span></a></div>
         <div class="nav-links">
             <a href="index.html" class="active">Home</a>
-            <a href="bootcamp.html">Bootcamp</a>
+            <a href="bootcamps/creative-ai-bootcamp/01.html">Bootcamp</a>
 
             <a href="blog.html">Blog</a>
             <a href="https://discord.gg/ZtakuZXEF" target="_blank" class="discord-btn">Join Discord</a>
@@ -79,7 +79,7 @@
                             Learn to build with the tools of tomorrow.</p>
 
                         <div style="margin-top: 1.5rem; display: flex; gap: 1rem; flex-wrap: wrap;">
-                            <a href="bootcamp.html" class="btn btn-primary">View Details</a>
+                            <a href="bootcamps/creative-ai-bootcamp/01.html" class="btn btn-primary">View Details</a>
                         </div>
                     </div>
                 </div>
