Update URL casing to lowercase jaagastudy

--- a/bootcamps/creative-ai-bootcamp/01.html
+++ b/bootcamps/creative-ai-bootcamp/01.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootcamp | JaagaStudy</title>
+    <title>Bootcamp | jaagastudy</title>
     <link rel="stylesheet" href="../../../index.css">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="../../../images/jaaga_logo.png">
-    <meta property="og:image" content="https://haricm.github.io/JaagaStudy/images/jaaga_logo.png">
+    <meta property="og:image" content="https://haricm.github.io/jaagastudy/images/jaaga_logo.png">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://haricm.github.io/JaagaStudy/images/jaaga_logo.png">
+    <meta name="twitter:image" content="https://haricm.github.io/jaagastudy/images/jaaga_logo.png">
 </head>
 
 <body>
@@ -155,7 +155,7 @@
                 <a href="https://www.facebook.com/groups/jaaga.study/" target="_blank" class="social-link">Facebook</a>
                 <a href="https://x.com/jaagastudy" target="_blank" class="social-link">X / Twitter</a>
                 <a href="https://it.linkedin.com/company/jaagastudy" target="_blank" class="social-link">LinkedIn</a>
-                <a href="https://www.instagram.com/JaagaStudy/" target="_blank" class="social-link">Instagram</a>
+                <a href="https://www.instagram.com/jaagastudy/" target="_blank" class="social-link">Instagram</a>
             </div>
             <p class="copyright">&copy; 2026 Jaaga Study. Built with Hope.</p>
         </footer>
