--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="JaagaStudy - Building Skill-Based Communities for the Future of Work">
-    <title>JaagaStudy | Future of Learning</title>
+    <meta name="description" content="jaagastudy - Building Skill-Based Communities for the Future of Work">
+    <title>jaagastudy | Future of Learning</title>
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="images/jaaga_logo.png">
-    <meta property="og:image" content="https://haricm.github.io/JaagaStudy/images/jaaga_logo.png">
+    <meta property="og:image" content="https://haricm.github.io/jaagastudy/images/jaaga_logo.png">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://haricm.github.io/JaagaStudy/images/jaaga_logo.png">
+    <meta name="twitter:image" content="https://haricm.github.io/jaagastudy/images/jaaga_logo.png">
 </head>
 
 <body>
@@ -109,7 +109,7 @@
             <a href="https://www.facebook.com/groups/jaaga.study/" target="_blank" class="social-link">Facebook</a>
             <a href="https://x.com/jaagastudy" target="_blank" class="social-link">X / Twitter</a>
             <a href="https://it.linkedin.com/company/jaagastudy" target="_blank" class="social-link">LinkedIn</a>
-            <a href="https://www.instagram.com/JaagaStudy/" target="_blank" class="social-link">Instagram</a>
+            <a href="https://www.instagram.com/jaagastudy/" target="_blank" class="social-link">Instagram</a>
         </div>
         <p class="copyright">&copy; 2026 Jaaga Study. Built with Hope.</p>
     </footer>
