Update homepage content: tagline and intro text

--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
         <section class="hero" style="min-height: 60vh; align-items: center; display: flex;">
             <div class="hero-content">
                 <h1>Jaaga Study</h1>
-                <p class="subtitle" style="color: #e2e8f0; font-weight: 500; margin-bottom: 2rem;">Building Skill-Based
-                    Communities for the Future of Work.</p>
+                <p class="subtitle" style="color: #e2e8f0; font-weight: 500; margin-bottom: 2rem;">A New Kind of School
+                    for a
+                    New Way of Living.</p>
                 <div class="actions">
                     <a href="https://example.com/signup" class="btn btn-primary">Sign Up for Updates</a>
                 </div>
@@ -54,16 +55,16 @@
 
             <!-- What is Jaaga Study? -->
             <section class="container">
-                <h2 style="text-align: center; margin-bottom: 2rem;">What is Jaaga Study?</h2>
-
                 <div style="max-width: 900px; margin: 0 auto 3rem;">
                     <p style="font-size: 1.1rem; text-align: center; margin-bottom: 0;">
-                        Jaaga Study is a community-driven learning laboratory. We move away from traditional lectures
-                        and
-                        toward intensive, peer-led sprints that focus on emerging technology and creative expression. We
-                        believe the best way to learn is by doing—together. Join our mailing list to be the first to
-                        know
-                        about our upcoming programs.
+                        Technology should make us more independent, not less. Jaaga Study is a community-driven learning
+                        laboratory dedicated to the craft of collective self-reliance.
+                        <br><br>
+                        We move beyond being consumers of tech to become architects of our own world—mastering the
+                        skills to
+                        live, learn, and thrive by building ambitious projects together.
+                        <br><br>
+                        <strong>Remote. Sustainable. Entirely in our hands.</strong>
                     </p>
                 </div>
             </section>
